--- a/app/webroot/css/screen.css
+++ b/app/webroot/css/screen.css
@@ -1,8 +1,9 @@
-* { font-family: Verdana, sans; }
-a { color: #000000; }
-a:hover { color: #FF0000; }
-p { font-size: 12px; }
-div { display: inline; font-size: 12px;}
-input { padding: 4px; }
-li { margin: 5px; }
-div.auto_complete { display: block; }
+div.auto_complete    {
+     position         :absolute;
+     width            :250px;
+     background-color :white;
+     border           :1px solid #fff;
+     margin           :0px;
+     padding          :0px;
+} 
+li.selected    { background-color: #fff; }
